--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="navBar">
          <div class="logo">
-            <a href="main.html"> <img src="./img/logo black and white.png" alt="" class="theLogo"></a>
+            <a href="./index.html"> <img src="./img/logo black and white.png" alt="" class="theLogo"></a>
          </div>
          <div class="text">
             <ul>
-                <li><a href="main.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="#AboutSec">About</a></li>
                 <li><a href="#SpeackersSec">Speakers</a></li>
                 <li><a href="#AgendaSec">Agenda</a></li>
