--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="Mentors">
             <div class="two"> Our Mentors</div>
             <div class="mentor1">
-                <div  id="amaniName" class="info"> Amani Sellam Chaima </div>
+                <div  id="amaniName" class="info"> Amani Chaimaa Sellam </div>
                 <div class="image">
                     
                     <div > <img src="./img/Group 9.png" alt="" class="decor"></div>
