--- a/index.html
+++ b/index.html
@@ -150,9 +150,23 @@
         <div class="excited">
             Are you excited to join <mark class="s"> BrainOn</mark> !!  here is the event agenda
         </div>
-        <div class="register">
+        <div id="display" class="register">
             <div class="click"> 
-                <a href="https://tripetto.app/run/7J9W80RJTM" target="_blank" >  <div id="reg" class="registerhover1">Agenda</div>	</a>
+                <a href="./img/event agenda Day1.png" target="_blank" >  <div id="reg" class="registerhover1">Competition -DAY1-</div>	</a>
+                <div class="pic">
+                    <img src="./img/Frame (3).png" alt="" >
+                </div>
+    
+            </div>
+            <div class="click"> 
+                <a href="./img/workshop agenda.png" target="_blank" >  <div id="reg" class="registerhover1">Workshops</div>	</a>
+                <div class="pic">
+                    <img src="./img/Frame (3).png" alt="" >
+                </div>
+    
+            </div>
+            <div class="click"> 
+                <a href="./img/event agenda Day2.png" target="_blank" >  <div id="reg" class="registerhover1">Competition  -DAY2-</div>	</a>
                 <div class="pic">
                     <img src="./img/Frame (3).png" alt="" >
                 </div>
